B&L QA/objects/Key_Products_Other__c.object
<CustomObject>
    <description>Used to detail the customers key products for BSS Phaco, custom pack etc.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used by EMEASU</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Key Products Other</relationshipLabel>
        <relationshipName>Key_Products_Other</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Used  by EMEASU</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prescription_Ship_to__c</fullName>
        <description>Used by EMEASU</description>
        <label>Prescription Ship to</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <description>Used by EMEASU. Used to detail the price type of a given price.</description>
        <inlineHelpText>Only required for Germany.</inlineHelpText>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private Only</fullName>
                </value>
                <value>
                    <fullName>Private Ambulant</fullName>
                </value>
                <value>
                    <fullName>Private Stationaer</fullName>
                </value>
                <value>
                    <fullName>Kasse Only</fullName>
                </value>
                <value>
                    <fullName>Kasse Ambulant</fullName>
                </value>
                <value>
                    <fullName>Kasse Stationaer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Prescription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Price__c</fullName>
        <description>Used by EMEASU</description>
        <label>Product Price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used by EMEASU. Enter product ID when the option is not available in the product picklist</description>
        <label>Product SKU</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Key Products Other</relationshipLabel>
        <relationshipName>Key_Products_Other</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>used by EMEASU</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BSS</fullName>
                </value>
                <value>
                    <fullName>Custom Packs</fullName>
                </value>
                <value>
                    <fullName>Instruments</fullName>
                </value>
                <value>
                    <fullName>IOL Inserters</fullName>
                </value>
                <value>
                    <fullName>Knives</fullName>
                </value>
                <value>
                    <fullName>Needles</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PFCL (Perflurocarbon Liquid)</fullName>
                </value>
                <value>
                    <fullName>Phaco - Millenium</fullName>
                </value>
                <value>
                    <fullName>Phaco - Stellaris</fullName>
                </value>
                <value>
                    <fullName>Silicone Oil</fullName>
                </value>
                <value>
                    <fullName>Viscoelastics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Used by EMEASU</description>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>00035N - EYE SWABS W/HANDLE STER.200/BX</fullName>
                </value>
                <value>
                    <fullName>1105723 - EINM.PHAKOKL.ABGEZ.2.8MM</fullName>
                </value>
                <value>
                    <fullName>1107178 - Erweiterungsklinge 4.0 unsteri</fullName>
                </value>
                <value>
                    <fullName>1275G - RETROBULB.25G 0.5X28MM 10/B</fullName>
                </value>
                <value>
                    <fullName>16110 - SPECIAL BLADE K STERILE 100/BX</fullName>
                </value>
                <value>
                    <fullName>16140 2.8 - PHACO BLADE STERILE 2.8MM 50/B</fullName>
                </value>
                <value>
                    <fullName>16145 2.5 - PHACOBLADE SHORT 2.5MM ST.50/B</fullName>
                </value>
                <value>
                    <fullName>16145 2.8 - PHACOBLADE SHORT 2.8MM ST.50/B</fullName>
                </value>
                <value>
                    <fullName>16145 3.0 - PHACOBLADE SHORT 3.0MM ST.50/B</fullName>
                </value>
                <value>
                    <fullName>16160 3.6 - IOL BLADE STERILE 3.6MM 50/BOX</fullName>
                </value>
                <value>
                    <fullName>22CMICSAFS - 2.2mm Co-axial Advanced Flow Kit - Box/12</fullName>
                </value>
                <value>
                    <fullName>22CMICSVENTURI - 2.2mm Co-axial Venturi Kit - Box/12</fullName>
                </value>
                <value>
                    <fullName>59081 - Amvisc - 0.8ml</fullName>
                </value>
                <value>
                    <fullName>59081L - AMVISC, 0.8ML</fullName>
                </value>
                <value>
                    <fullName>60081 - Amvisc Plus - 0.8ml</fullName>
                </value>
                <value>
                    <fullName>60081L - AMVISC PLUS, 0.8ML</fullName>
                </value>
                <value>
                    <fullName>85302Y2 - DISPOSABLE-ASPIRATG.CAN.STRGHT</fullName>
                </value>
                <value>
                    <fullName>85761 - I/A-HANDPIECE STRAIGHT SILICON</fullName>
                </value>
                <value>
                    <fullName>85795ST - I/A HDP 45dg W SLVE 1.8 12/BX</fullName>
                </value>
                <value>
                    <fullName>93100S - DONOR CORNEA HOLDER STER.10/B</fullName>
                </value>
                <value>
                    <fullName>99991S - SET F. INTRAVITR. INJECT. 10/P</fullName>
                </value>
                <value>
                    <fullName>AQ019 - Aqsia (Plastic Vials) - 12 x 19ml</fullName>
                </value>
                <value>
                    <fullName>AQ500G - Aqsia (Glass Bottle) - 12 x 500ml</fullName>
                </value>
                <value>
                    <fullName>AQ500P - Aqsia (Plastic Bottle) - 12 x 500ml</fullName>
                </value>
                <value>
                    <fullName>BL5110 - STELLARIS Prem. Vacuum phaco pack (6/box)</fullName>
                </value>
                <value>
                    <fullName>BL5111 - STELLARIS Basic Vacuum phaco pack (6/box)</fullName>
                </value>
                <value>
                    <fullName>BL5112 - STELLARIS Premium Stablechamber VFM phaco pack (t</fullName>
                </value>
                <value>
                    <fullName>BL5113A - MICRO INCISION VACUUM PK ANG</fullName>
                </value>
                <value>
                    <fullName>BL5113 - STELLARIS MICS 1.8mm VFM pack (stable chamber and</fullName>
                </value>
                <value>
                    <fullName>BL5114A - PREMIUM PHACO PACK-1.8MM ANG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standing_Order_End_Dt__c</fullName>
        <description>Used by EMEASU</description>
        <label>Standing Order End Dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Standing_Order_Ref__c</fullName>
        <description>USed by EMEASU</description>
        <label>Standing Order Ref</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Key Products Other</label>
    <nameField>
        <displayFormat>KPO-{000000}</displayFormat>
        <label>KP Other Auto Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Products Other</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>